# chaoxing_download

./: .gitignore  README.md  pyproject.toml
src/chaoxing_course_downloader/: __init__.py  cli.py
tests/: test_cli_helpers.py
