[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoxing-course-downloader"
version = "0.1.0"
description = "Download Chaoxing course materials with browser-use and optionally extract PDF text."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mark" }
]
keywords = ["chaoxing", "mooc", "course", "downloader", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Utilities"
]
dependencies = [
  "requests>=2.31"
]

[project.optional-dependencies]
pdf = ["pypdf>=6.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
chaoxing-course-downloader = "chaoxing_course_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
